src/test/ui/recursion/issue-83150.stderr
warning: function cannot return without recursing
  --> $DIR/issue-83150.rs:10:1
   |
LL | fn func<T: Iterator<Item = u8>>(iter: &mut T) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot return without recursing
LL |     func(&mut iter.map(|x| x + 1))
   |     ------------------------------ recursive call site
   |
   = help: a `loop` may express intention better if this is on purpose
   = note: `#[warn(unconditional_recursion)]` on by default

error: reached the recursion limit while instantiating `func::<Map<&mut Map<&mut Map<&mu...n/issue-83150.rs:11:24: 11:27]>>`
  --> $DIR/issue-83150.rs:11:5
   |
LL |     func(&mut iter.map(|x| x + 1))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `func` defined here
  --> $DIR/issue-83150.rs:10:1
   |
LL | fn func<T: Iterator<Item = u8>>(iter: &mut T) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the full type name has been written to '$TEST_BUILD_DIR/recursion/issue-83150/issue-83150.long-type.txt'

error: aborting due to previous error; 1 warning emitted

